<resources>
    <string name="app_name">HealthMovement</string>
    <string name="start_exercising">开始锻炼</string>
    <string name="customize_exerc" translatable="false">自定义</string>
    <string name="repid_exerc">快速</string>
    <string name="every_day_exerc">每天</string>
    <string name="difficult_exerc" translatable="false">困难</string>
    <string name="penitence_exerc">苦修</string>

    <string name="repid_exerc_time">~6分钟</string>
    <string name="every_day_time">~12分钟</string>
    <string name="difficult_time" translatable="false">~18分钟</string>
    <string name="penitence_time">~30分钟</string>

    <string name="customize_exercising" translatable="false">自定义锻炼</string>
    <string name="new_exercising">新锻炼</string>
    <string name="cancel" translatable="false">取消</string>
    <string name="save">存储</string>
    <string name="settings">设置</string>

    <string name="remind" translatable="false">请根据你的运动能力和可用时间来选择一套锻炼。</string>

    <string name="choose_practice_title" translatable="false">选择练习</string>
    <string name="done">完成</string>
    <string name="choose_practice_remind" translatable="false">每套锻炼将随机选择多达6个练习。</string>
    <string name="time_00_00">00:00</string>

    <string name="title">标题：</string>
    <string name="exercise">练习：</string>
    <string name="edit_text_hint">输入锻炼标题...</string>
    <string name="word_count_limit">%1$d/16</string>
    <string name="exercise_info">选择一项练习将其添加到锻炼中。</string>
    <string name="exercise_info_two">拖动可重新排序，滑动可删除。</string>
    <string name="delete_info">滑动可删除。</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_delete_info">是否确认删除?</string>
    <string name="ok">确定</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>

</resources>
